Splitted DB config