@@ -11,3 +11,9 @@ Components
 [Spray](http://spray.io/)
 [Slick](http://slick.typesafe.com/)
 [JSONSchema](http://json-schema.org/)
+
+
+Run parameters:
+```
+sbt -J-Xmx4G -J-XX:MaxMetaspaceSize=1G -J-XX:MaxPermSize=1G -J-XX:+CMSClassUnloadingEnabled -J-Xss3m run
+```
